# r2sdk

./: .gitignore  CMakeLists.txt  README.md
r2launcher/: CMakeLists.txt  main.cpp
r2sdk/: CMakeLists.txt  r2sdk.def
r2sdk/common/: pseudodefs.h
r2sdk/common/GameUI/: IGameConsole.h
r2sdk/core/: dllmain.cpp  init.cpp  init.h  logdef.cpp  logdef.h  r2dev.h  stdafx.h  termutil.cpp  termutil.h
r2sdk/engine/: console.cpp  console.h  vengineserver_impl.cpp  vengineserver_impl.h  vgui_baseui_interface.cpp  vgui_baseui_interface.h
r2sdk/engine/client/: client.cpp  client.h
r2sdk/filesystem/: basefilesystem.cpp  basefilesystem.h
r2sdk/gameui/: GameConsole.cpp  GameConsole.h  GameConsoleDialog.cpp  GameConsoleDialog.h
r2sdk/launcher/: IApplication.cpp  IApplication.h  launcher.cpp  launcher.h
r2sdk/mathlib/: color.h  vector.h  vector2d.h
r2sdk/origin/: originauth.cpp  originauth.h
r2sdk/public/: filesystem.h  icommandline.h  iconcommand.h  iconvar.h  icvar.h  ipackedstore.h  isquirrelmanager.h
r2sdk/public/appframework/: IAppSystem.h
r2sdk/public/interfaces/: interfaces.h
r2sdk/public/tier0/: basetypes.h  dbg.h  dbgflag.h  fasttimer.h  platform.h  platform_internal.h  threadtools.h
r2sdk/public/tier1/: cmd.h  cvar.h  interface.h
r2sdk/public/toolframework/: itoolentity.h
r2sdk/public/utility/: memaddr.cpp  memaddr.h  module.cpp  module.h  utility.cpp
r2sdk/public/vgui/: ISurface.h  VGUI.h
r2sdk/public/vgui_controls/: BitmapImagePanel.h  EditablePanel.h  Frame.h  Label.h  ListPanel.h  Panel.h
r2sdk/squirrel/: sqapi.h  sqclasstypes.h  sqinit.cpp  sqinit.h  sqscript.cpp  sqscript.h  squirrelmanager.cpp  squirrelmanager.h  sqvm.cpp  sqvm.h
r2sdk/squirrel/client/: sqapi.h  sqscript.h  sqvm.h
r2sdk/squirrel/server/: sqapi.h  sqscript.h  sqvm.h
r2sdk/squirrel/ui/: sqapi.h  sqvm.h
r2sdk/tier0/: commandline.h  cpu.cpp  cputopology.cpp  cputopology.h  crashhandler.cpp  dbg.cpp  fasttimer.cpp  memstd.h
r2sdk/tier1/: cmd.cpp  cvar.cpp  interface.cpp  strtools.cpp
r2sdk/tier2/: tier2.cpp
r2sdk/tier3/: tier3.cpp
r2sdk/vgui/: vgui_fpspanel.cpp  vgui_fpspanel.h
r2sdk/vguimatsurface/: MatSystemSurface.h
r2sdk/vstdlib/: calback.cpp  callback.cpp  callback.h  cvar.cpp  cvar.h
r2sdk/windows/: console.cpp  console.h  loadlibrary.cpp  loadlibrary.h
