add_library(r2sdk SHARED "common/GameUI/IGameConsole.h"
                         "common/experimental.h"
                         "common/pseudodefs.h"
                         "common/sdkdefs.h"
                         "common/x86defs.h"
                         "core/assert.h"
                         "core/dllmain.cpp"
                         "core/init.cpp"
                         "core/init.h"
                         "core/logdef.cpp"
                         "core/logdef.h"
                         "core/r2dev.h"
                         "core/termutil.cpp"
                         "core/termutil.h"
                         "engine/client/client.cpp"
                         "engine/client/client.h"
                         "engine/console.cpp"
                         "engine/console.h"
                         "engine/vengineserver_impl.cpp"
                         "engine/vengineserver_impl.h"
                         "engine/vgui_baseui_interface.cpp"
                         "engine/vgui_baseui_interface.h"
                         "filesystem/basefilesystem.cpp"
                         "filesystem/basefilesystem.h"
                         "gameui/GameConsole.cpp"
                         "gameui/GameConsole.h"
                         "gameui/GameConsoleDialog.cpp"
                         "gameui/GameConsoleDialog.h"
                         "launcher/IApplication.cpp"
                         "launcher/IApplication.h"
                         "launcher/launcher.cpp"
                         "launcher/launcher.h"
                         "mathlib/color.h"
                         "mathlib/fbits.cpp"
                         "mathlib/fbits.h"
                         "mathlib/math_pfns.h"
                         "mathlib/vector.h"
                         "mathlib/vector2d.h"
                         "public/appframework/IAppSystem.h"
                         "public/interfaces/interfaces.h"
                         "public/tier0/annotations.h"
                         "public/tier0/basetypes.h"
                         "public/tier0/commonmacros.h"
                         "public/tier0/dbg.h"
                         "public/tier0/dbgflag.h"
                         "public/tier0/fasttimer.h"
                         "public/tier0/platform.h"
                         "public/tier0/platform_internal.h"
                         "public/tier0/threadtools.h"
                         "public/tier0/valve_off.h"
                         "public/tier0/valve_on.h"
                         "public/tier0/wchartypes.h"
                         "public/tier1/cmd.h"
                         "public/tier1/cvar.h"
                         "public/tier1/interface.h"
                         "public/tier1/strtools.h"
                         "public/toolframework/itoolentity.h"
                         "public/utility/binstream.cpp"
                         "public/utility/binstream.h"
                         "public/utility/memaddr.cpp"
                         "public/utility/memaddr.h"
                         "public/utility/module.cpp"
                         "public/utility/module.h"
                         "public/utility/utility.cpp"
                         "public/utility/utility.h"
                         "public/vgui/VGUI.h"
                         "public/vgui/ISurface.h"
                         "public/vgui_controls/BitmapImagePanel.h"
                         "public/vgui_controls/EditablePanel.h"
                         "public/vgui_controls/Frame.h"
                         "public/vgui_controls/Label.h"
                         "public/vgui_controls/Panel.h"
                         "public/filesystem.h"
                         "public/icommandline.h"
                         "public/iconcommand.h"
                         "public/iconvar.h"
                         "public/icvar.h"
                         "public/ipackedstore.h"
                         "squirrel/client/sqscript.h"
                         "squirrel/client/sqvm.h"
                         "squirrel/server/sqscript.h"
                         "squirrel/server/sqvm.h"
                         "squirrel/ui/sqvm.h"
                         "squirrel/sqdatatypes.h"
                         "squirrel/sqclasstypes.h"
                         "squirrel/sqscript.cpp"
                         "squirrel/sqscript.h"
                         "squirrel/sqvm.cpp"
                         "squirrel/sqvm.h"
                         "tier0/commandline.h"
                         "tier0/cpu.cpp"
                         "tier0/cpu.h"
                         "tier0/cputopology.cpp"
                         "tier0/cputopology.h"
                         "tier0/crashhandler.cpp"
                         "tier0/crashhandler.h"
                         "tier0/dbg.cpp"
                         "tier0/fasttimer.cpp"
                         "tier0/memstd.h"
                         "tier0/platform.cpp"
                         "tier1/cmd.cpp"
                         "tier1/cvar.cpp"
                         "tier1/interface.cpp"
                         "tier1/strtools.cpp"
                         "tier2/tier2.cpp"
                         "tier3/tier3.cpp"
                         "vgui/vgui_fpspanel.cpp"
                         "vgui/vgui_fpspanel.h"
                         "vguimatsurface/MatSystemSurface.h"
                         "vstdlib/callback.cpp"
                         "vstdlib/callback.h"
                         "vstdlib/random.cpp"
                         "vstdlib/random.h"
                         "windows/console.cpp"
                         "windows/console.h"
                         "windows/loadlibrary.cpp"
                         "windows/loadlibrary.h")

target_link_libraries(r2sdk detours spdlog dbghelp)

target_precompile_headers(r2sdk PUBLIC "core/stdafx.h")

include_directories(. public)